...
      />
      <Tab.Screen
        name="Hunt"
        component={HuntNavigator}
        options={{
          tabBarIcon: ({ focused }) => <TabIcon focused={focused} name="Hunt" />,
          tabBarButtonTestID: "tab-hunt",
        }}
      />
      <Tab.Screen
        name="Map"
        component={MapScreen}
        options={{
          tabBarIcon: ({ focused }) => <TabIcon focused={focused} name="Map" />,
          tabBarButtonTestID: "tab-map",
        }}
      />
      <Tab.Screen
        name="Me"
        component={ProfileScreen}
        options={{
...
